<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    >

<EditText android:id="@+id/edit_vehicle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_vehicle"
    />


<TextView android:id="@+id/prev_odometer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/prev_odometer"
    />
<EditText android:id="@+id/prev_odometer_value"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_odometer" />

<TextView android:id="@+id/current_odometer"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Current odometer:"
    />
<EditText android:id="@+id/edit_odometer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/edit_odometer" />

<EditText android:id="@+id/edit_description"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"    
        android:hint="@string/edit_description" />

<TextView android:id="@+id/start_time"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Start time:"
    />
<DatePicker android:id="@+id/start_date_value"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>
<TimePicker android:id="@+id/start_time_value"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>

<TextView android:id="@+id/end_time"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="Finish time:"
    />
<DatePicker android:id="@+id/end_date_value"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>
<TimePicker android:id="@+id/end_time_value"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"/>


<Button android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
    />



</LinearLayout>

